src/test/deca/syntax/invalid/lexer/lexer_circular_include2.deca
// Description:
//    test de l'inclusion circulaire
//
// Resultats:
// inclusion circulaire
// Ligne <8> : <Circular include for lexer_circular_include.java>

#include "lexer_circular_include.deca"
